Add swagger docs response
