# backend/api/src/routes/index.ts
@@ -1,10 +1,19 @@
 import { Router } from 'express';
-import { get } from './example/get';
-import { post } from './example/post';
+import { getFolder } from './folders/getFolder';
+import { getFolders } from './folders/getFolders';
+import { createFolder } from './folders/createFolder';
+import { updateFolder } from './folders/updateFolder';
+import { deleteFolder } from './folders/deleteFolder';
+import { getDocs } from './docs/getDocs';
 
 export const injectRoutes = (router: Router): Router => {
-  router.get('/get', get);
-  router.post('/post', post);
+  router.get('/folders', getFolders);
+  router.post('/folders', createFolder);
+  router.get('/folders/:folderId', getFolder);
+  router.post('/folders/:folderId', updateFolder);
+  router.delete('folders/:folderId', deleteFolder);
+
+  router.get('/docs', getDocs);
 
   return router;
 };
